--- a/.github/workflows/update-stats.yaml
+++ b/.github/workflows/update-stats.yaml
@@ -1,25 +1,19 @@
-name: Update GitHub Stats
+name: Update README stats
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Executa uma vez por dia à meia-noite UTC
-  workflow_dispatch:  # Permite execução manual do workflow
+    - cron: '0 */12 * * *'  # Roda a cada 12 horas
+  workflow_dispatch:  # Permite rodar manualmente
 
 jobs:
   update-readme:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Update GitHub Stats
-        run: |
-          curl -o README.md "https://github-readme-stats.vercel.app/api/top-langs/?username=dnribeiro&layout=donut&theme=dark&count_private=true&token=${{ secrets.GH_STATS_TOKEN }}"
+      - uses: actions/checkout@v2
       
-      - name: Commit and Push Changes
+      - name: Update README
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@github.com"
-          git add README.md
-          git commit -m "Updated GitHub Stats" || echo "No changes to commit"
-          git push
+          # Aqui você pode usar um script para atualizar o README
+          # O token estará disponível como variável de ambiente
